
enum class ButtonType {
    UP,
    DOWN,
    FLOOR,
    OPEN,
    CLOSE,
    ALARM
};