
#ifndef DIRECTION_H
#define DIRECTION_H
enum class Direction {
    UP,
    DOWN,
    IDLE
};

#endif