enum class DoorState {
    OPEN,
    CLOSED
};
