enum class ElevatorStatus {
    MOVING,
    STOPPED
};